[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "storm-sampler"
version = "2.1.1"
description = "STORM -- Adaptive stiffness-switching ODE sampler for flow-matching diffusion models. Eliminates metallic artifacts via geometric trajectory stabilization."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Alexander Allan (MDMAchine)" },
]
keywords = ["diffusion", "sampler", "ode", "flow-matching", "audio", "comfyui", "ace-step"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
telemetry = [
    "matplotlib>=3.7.0",
    "pillow>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/MDMAchine/STORM-Sampler"
Documentation = "https://github.com/MDMAchine/STORM-Sampler/blob/main/docs/STORM_White_Paper_v3.md"
Issues = "https://github.com/MDMAchine/STORM-Sampler/issues"
